--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -15,3 +15,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           rerendering_github_token: ${{ secrets.RERENDERING_GITHUB_TOKEN }}
+# test line for rerender edits
