--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -17,3 +17,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           rerendering_github_token: ${{ secrets.RERENDERING_GITHUB_TOKEN }}
+
+
+# blah blah
