--- a/.github/workflows/webservices.yml
+++ b/.github/workflows/webservices.yml
@@ -11,4 +11,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           rerendering_github_token: ${{ secrets.RERENDERING_GITHUB_TOKEN }}
-          
+          ssh_private_key: ${{ secrets.CONDA_SMITHY_SSH_DEPLOY_KEY }}
