--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -14,4 +14,4 @@ id: automerge-action
 uses: conda-forge/automerge-action@main
 with:
 github_token: ${{ secrets.GITHUB_TOKEN }}
-rerendering_github_token: ${{ secrets.RERENDERING_GITHUB_TOKEN }}# test line for rerender edits
+rerendering_github_token: ${{ secrets.RERENDERING_GITHUB_TOKEN }}# test line for rerender edits# test line for rerender edits
