--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,8 @@ source:
   sha256: b88548e231880ecb6f246698c86baad3ee88780dc1bc9d2b70a5f30776f804bc
 
 build:
-  number: 0
-  skip: true  # [py != 39 or win or osx or aarch64 or ppc64le or s390x]
+  number: 101
+  skip: true  # [py != 39 or win or aarch64 or ppc64le or s390x]
 
 requirements:
   host:
