--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,17 +7,16 @@ package:
 
 source:
   url: https://github.com/regro/cf-autotick-bot-test-package/archive/v{{ version }}.tar.gz
-  sha256: 26e61828f8280104089e6859dc1fba6fd7518c9b9dd0d9724a0e23172c51e719
+  sha256: f6c45d5788f51dbe1cc55e1010f3e9ebd18b6c0f21907fc35499468a59827eef
 
 build:
-  number: 104
-  skip: true  # [py != 39 or win or aarch64 or ppc64le or s390x]
+  number: 0
+  skip: true  # [py != 39 or win or osx or aarch64 or ppc64le or s390x]
 
 requirements:
   host:
     - python
     - pip
-    - setuptools
   run:
     - python
 
